@@ -6,7 +6,9 @@ set -e
 
 if [ -d /@MODULES_BASE_PATH@ ]; then
     # Purge the cache
-    rm -f /@MODULES_BASE_PATH@/immodules.cache
-    rm -f /@MODULES_BASE_PATH@/printbackends.cache
+    for dir in immodules printbackends; do
+        rm -f "/@MODULES_BASE_PATH@/$dir/giomodule.cache"
+        rmdir -p --ignore-fail-on-non-empty "/@MODULES_BASE_PATH@/$dir"
+    done
     rmdir -p --ignore-fail-on-non-empty /@MODULES_BASE_PATH@
 fi
